test/spec_vectors/type-subtyping/fail/module_66.wat
(module (type $s0 (sub (struct (field i32)))) (type $s1 (sub $s0 (struct (field i64)))))